--- a/Thermite/proj.win32/Thermite.win32.vcxproj.filters
+++ b/Thermite/proj.win32/Thermite.win32.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="resource.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="..\core\NonConvexHull.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\core\AppDelegate.cpp">
@@ -105,6 +108,9 @@
       <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\core\NonConvexHull.cpp">
       <Filter>source</Filter>
     </ClCompile>
   </ItemGroup>
