Refactored current prototype implementation to use objects Bomb and Breakable. Created NonConvexHull concept for bombs. Created SimpleBomb to test breakables with the simplest form of bomb possible using a triangular blast shape. TODO: implement ApplyBomb()

--- a/Thermite/proj.win32/Thermite.win32.vcxproj
+++ b/Thermite/proj.win32/Thermite.win32.vcxproj
@@ -29,6 +29,7 @@
     <ClInclude Include="..\core\Sandbox.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="SimpleBomb.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\core\AppDelegate.cpp" />
@@ -45,6 +46,7 @@
     <ClCompile Include="..\core\Prototype.cpp" />
     <ClCompile Include="..\core\Sandbox.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SimpleBomb.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\core\BoxDebugLayer.mm" />
