--- a/Thermite/proj.win32/Thermite.win32.vcxproj.filters
+++ b/Thermite/proj.win32/Thermite.win32.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="..\core\NonConvexHull.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="SimpleBomb.h">
+      <Filter>include</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\core\AppDelegate.cpp">
@@ -111,6 +114,9 @@
       <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="..\core\NonConvexHull.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="SimpleBomb.cpp">
       <Filter>source</Filter>
     </ClCompile>
   </ItemGroup>
