--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -10,7 +10,7 @@ sprints:
     end_date: "2026-01-09"
     capacity_points: 30
     committed_points: 29
-    completed_points: 3
+    completed_points: 8
     status: "in_progress"
     goal: "Establish production-ready infrastructure with deployed services, database schema, and map system foundation enabling development of game features"
     stories:
@@ -22,8 +22,9 @@ sprints:
       - story_id: "STORY-INF-001"
         title: "Database Schema and Migrations"
         points: 5
-        status: "not_started"
-        assigned_to: null
+        status: "completed"
+        assigned_to: "Claude"
+        completed_date: "2025-12-26"
       - story_id: "STORY-INF-002"
         title: "Docker Compose Deployment Setup"
         points: 3
