feat(map): implement grid map data structure with comprehensive tests (STORY-028)
- Created Grid struct with 2D tile array, width, and height
- Implemented Tile enum: Wall, Floor, Destructible, Loot, Extraction
- Added tile query methods: get_tile_at, set_tile_at, is_walkable, is_occupied, in_bounds
- Bounds checking prevents out-of-range access
- Serde serialization/deserialization for JSON templates
- Comprehensive test coverage (15 tests):
  - Edge cases: 0x0, 1x1, large (100x100), asymmetric grids
  - Bounds checking: all corners, edges, out-of-bounds
  - Tile operations: walkability, movement blocking, get/set
  - Serialization round-trip
- All tests passing (15/15)

Foundational data structure for map system enabling STORY-029.

--- a/docs/sprint-status.yaml
+++ b/docs/sprint-status.yaml
@@ -10,7 +10,7 @@ sprints:
     end_date: "2026-01-09"
     capacity_points: 30
     committed_points: 29
-    completed_points: 13
+    completed_points: 16
     status: "in_progress"
     goal: "Establish production-ready infrastructure with deployed services, database schema, and map system foundation enabling development of game features"
     stories:
@@ -45,8 +45,9 @@ sprints:
       - story_id: "STORY-028"
         title: "Grid Map Data Structure and Validation"
         points: 3
-        status: "not_started"
-        assigned_to: null
+        status: "completed"
+        assigned_to: "Claude"
+        completed_date: "2025-12-27"
       - story_id: "STORY-029"
         title: "Map Template System with Procedural Variation"
         points: 5
