--- a/.bmad/sprint-status.yaml
+++ b/.bmad/sprint-status.yaml
@@ -10,8 +10,8 @@ sprints:
     end_date: "2026-01-17"
     capacity_points: 30
     committed_points: 21
-    completed_points: 16
-    status: "in_progress"
+    completed_points: 21
+    status: "completed"
     goal: "Establish infrastructure foundation and database layer"
     stories:
       - story_id: "STORY-INF-001"
@@ -29,8 +29,9 @@ sprints:
       - story_id: "STORY-INF-003"
         title: "CI/CD Pipeline"
         points: 5
-        status: "not_started"
-        assigned_to: null
+        status: "completed"
+        assigned_to: "Claude"
+        completed_date: "2026-01-05"
 
   - sprint_number: 2
     start_date: "2026-01-20"
@@ -263,14 +264,14 @@ sprints:
         assigned_to: null
 
 velocity:
-  sprint_1: null
+  sprint_1: 21
   sprint_2: null
   sprint_3: null
   sprint_4: null
   sprint_5: null
   sprint_6: null
   sprint_7: null
-  rolling_average: null
+  rolling_average: 21
 
 team:
   size: 1
