--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -22,6 +22,7 @@ rand = "0.8"
 thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+thermite-protocol = { path = "../protocol" }
 
 [dev-dependencies]
 sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
